# SketchRetrieval

./: .gitignore  CMakeLists.txt  readme.md
benchmark/util/offviewer/: offviewer
evalutation/: SHREC13_SBR_Model.cla  SHREC13_SBR_Sketch.cla  calcAvgPerf.m  evaluate_rank_lists_shrec13_sbr_complete.m  evaluate_rank_lists_shrec13_sbr_test.m  evaluate_rank_lists_shrec13_sbr_train.m  interpolatePerf.m  read_classification_file_shrec13.m  read_rank_list_shrec13.m  readme.txt
models/: SHREC13_SBR_Model_Index.txt
pipeline/models_ply/: m0.ply  m1.ply  m10.ply  m100.ply  m1000.ply  m1001.ply  m1002.ply  m1003.ply  m1004.ply  m1005.ply  m1006.ply  m1007.ply  m1008.ply  m1009.ply  m101.ply  m1010.ply  m1011.ply  m1012.ply  m1013.ply  m1014.ply  m1015.ply  m1016.ply  m1017.ply  m1018.ply  m1019.ply  m102.ply  m1020.ply  m1021.ply  m1022.ply  m1023.ply  m1024.ply  m1025.ply  m1026.ply  m1027.ply  m1028.ply  m1029.ply  m103.ply  m1030.ply  m1031.ply  m1032.ply  (+1202 more)
src/: blob.cpp  blob.h  clusters.cpp  clusters.h  main.cpp  sketch.cpp  tf_idf.cpp  tf_idf.h
src/geometry/: line.cpp  line.h  model.cpp  model.h  transform.cpp  transform.h  triangle.cpp  triangle.h
src/learning/: ml.cpp  ml.h  svm.cpp  svm.h
src/structure/: blob.cpp  blob.h
training_sketch_examples/: SHREC13_SBR_Sketch_Train_Example.cla
utils/: cluster.sh  contour_extracter.sh  contour_extraction.sh  contour_extractor.sh  database.sh  encoder.sh  gabor_filter.sh  merge_sample.sh  offline.sh  online.sh  ply_converter.sh  renderer.sh  sample.sh  view_select.sh  view_selector.sh
utils/Contour/: CMakeLists.txt  canny.cpp
utils/Database/: CMakeLists.txt  database.cpp
utils/Gabor/: CMakeLists.txt  gabor.cpp
utils/KMean/: CMakeLists.txt  k_mean.cpp  k_mean.cu  k_mean.h  k_mean_demo.cpp  k_mean_main.cpp  kernel.cu  kernel.h  read_data.cpp  read_data.h
utils/Merge/: CMakeLists.txt  merge.cpp
utils/PLYConverter/: CMakeLists.txt  ply_converter.cpp
utils/Renderer/: CMakeLists.txt  offviewer.cpp  renderer.cpp
utils/Sample/: CMakeLists.txt  sample.cpp
utils/ViewSelector/: CMakeLists.txt  selector.cpp
utils/sample/: CMakeLists.txt  sample  sample.cpp
utils/view_selection/: CMakeLists.txt  view_selection.cpp
