CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

SET(CMAKE_FIND_LIBRARY_PREFIXES "lib64;lib")
SET(CMAKE_FIND_LIBRARY_SUFFIXES ".so;.a")
SET(CMAKE_SIZEOF_VOID_P "8")

SET(OpenCV_STATIC OFF)
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

SET(VTK_DIR "/usr/local")
FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

PROJECT(Sketch)

SET(MAIN src/sketch.cpp)
ADD_EXECUTABLE(sketch ${MAIN} src/clusters.cpp src/tf_idf.cpp)

TARGET_LINK_LIBRARIES(sketch ${OpenCV_LIBS} ${VTK_LIBRARIES})