CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

SET(CMAKE_FIND_LIBRARY_PREFIXES "lib64;lib")
SET(CMAKE_FIND_LIBRARY_SUFFIXES ".so;.a")
SET(CMAKE_SIZEOF_VOID_P "8")

SET(OpenCV_STATIC OFF)
FIND_PACKAGE(OpenCV REQUIRED)

PROJECT(Contour)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

SET(SOURCE_FILES canny.cpp)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
ADD_EXECUTABLE(contour ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(contour ${OpenCV_LIBS})